래픽토랭 : 트랜잭션 경계, Github 429 정책, 의존성 방향 등 변경
1. APi v1에 대한 리팩토링 진행
- RepositoryAdapter 분리 (content, mutation, query)
- GithubAPI 404 처리에 대한 로직 수정 (GithubRepositoryExceptionTranslator.failWith 또는 반환 값 지정)
- 이외 installation, user 관련 adapter 수정

2. github user 트랜잭션 분리
- 회원가입 정보 생성 시 github 요청이 트랜잭션에 묶이지 않도록 조정

3. github 429 정책 변경
- 429 발생 시, 403으로 가던 버그 수정
- 429 발생 시, retryAfter 헤더 추가
- rate limit 발생 시, redis에 저장하여 추가 api 요청을 방지

4. Usecase에서 port in의 DTO를 사용하는 의존성 문제 해결
- port in에서 사용하는 result 객체 추가

5. 쿠키 정책 변경
- SameSite Lax -> Strict로 변경