@@ -1,8 +1,5 @@
 package seungyong.helpmebackend.repository.application;
 
-import com.fasterxml.jackson.core.type.TypeReference;
-import org.awaitility.Awaitility;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -10,439 +7,283 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.http.ResponseEntity;
-import seungyong.helpmebackend.global.application.port.out.RedisPortOut;
-import seungyong.helpmebackend.global.domain.type.RedisKey;
 import seungyong.helpmebackend.global.exception.CustomException;
-import seungyong.helpmebackend.project.application.port.out.ProjectPortOut;
-import seungyong.helpmebackend.project.domain.entity.Project;
-import seungyong.helpmebackend.repository.adapter.in.web.dto.request.RequestDraftEvaluation;
-import seungyong.helpmebackend.repository.adapter.in.web.dto.request.RequestGeneration;
-import seungyong.helpmebackend.repository.adapter.in.web.dto.request.RequestPull;
-import seungyong.helpmebackend.repository.adapter.in.web.dto.response.*;
-import seungyong.helpmebackend.repository.application.port.out.*;
-import seungyong.helpmebackend.repository.application.port.out.command.CreatePullRequestCommand;
+import seungyong.helpmebackend.repository.application.dto.ReadmeContext;
+import seungyong.helpmebackend.repository.application.port.in.command.CreateReadmePullRequestCommand;
+import seungyong.helpmebackend.repository.application.port.in.command.EvaluateDraftReadmeCommand;
+import seungyong.helpmebackend.repository.application.port.in.command.GenerateDraftReadmeCommand;
+import seungyong.helpmebackend.repository.application.port.in.result.GeneratedReadmeResult;
+import seungyong.helpmebackend.repository.application.port.in.result.ReadmeEvaluationResult;
+import seungyong.helpmebackend.repository.application.port.out.GPTPortOut;
+import seungyong.helpmebackend.repository.application.port.out.RepositoryContentPortOut;
+import seungyong.helpmebackend.repository.application.port.out.RepositoryMutationPortOut;
+import seungyong.helpmebackend.repository.application.port.out.RepositoryQueryPortOut;
 import seungyong.helpmebackend.repository.application.port.out.command.ReadmePushCommand;
-import seungyong.helpmebackend.repository.application.port.out.command.RepoBranchCommand;
-import seungyong.helpmebackend.repository.application.port.out.command.RepoInfoCommand;
-import seungyong.helpmebackend.repository.application.port.out.result.*;
+import seungyong.helpmebackend.repository.application.port.out.result.EvaluationContentResult;
+import seungyong.helpmebackend.repository.application.port.out.result.GPTRepositoryInfoResult;
+import seungyong.helpmebackend.repository.application.port.out.result.RepositoryDetailResult;
+import seungyong.helpmebackend.repository.application.port.out.result.RepositoryResult;
+import seungyong.helpmebackend.repository.domain.entity.Repository;
 import seungyong.helpmebackend.repository.domain.exception.RepositoryErrorCode;
-import seungyong.helpmebackend.section.adapter.in.web.dto.response.ResponseSections;
-import seungyong.helpmebackend.section.application.port.out.SectionPortOut;
-import seungyong.helpmebackend.section.domain.entity.Section;
-import seungyong.helpmebackend.sse.application.port.out.SSEPortOut;
 import seungyong.helpmebackend.sse.domain.type.SSETaskName;
-import seungyong.helpmebackend.user.application.port.out.UserPortOut;
-import seungyong.helpmebackend.user.domain.entity.User;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
-import java.util.concurrent.TimeUnit;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 
 @ExtendWith(MockitoExtension.class)
 class RepositoryServiceTest {
-    @Mock private UserPortOut userPortOut;
-    @Mock private RepositoryPortOut repositoryPortOut;
-    @Mock private CipherPortOut cipherPortOut;
-    @Mock private ObjectCipherPortOut objectCipherPortOut;
+    private static final long USER_ID = 1L;
+    private static final String OWNER = "owner";
+    private static final String NAME = "repo";
+    private static final String TOKEN = "access-token";
+
+    @Mock private GithubAccessTokenProvider githubAccessTokenProvider;
+    @Mock private RepositoryQueryPortOut repositoryQueryPortOut;
+    @Mock private RepositoryContentPortOut repositoryContentPortOut;
+    @Mock private RepositoryMutationPortOut repositoryMutationPortOut;
+    @Mock private ReadmeContextLoader readmeContextLoader;
+    @Mock private ReadmeAsyncResultStore readmeAsyncResultStore;
+    @Mock private ReadmeSectionWriter readmeSectionWriter;
     @Mock private GPTPortOut gptPortOut;
-    @Mock private RedisPortOut redisPortOut;
-    @Mock private RepositoryTreeFilterPortOut repositoryTreeFilterPortOut;
-    @Mock private SSEPortOut ssePortOut;
-    @Mock private ProjectPortOut projectPortOut;
-    @Mock private SectionPortOut sectionPortOut;
-    @Mock private CommitPortOut commitPortOut;
 
     @InjectMocks private RepositoryService repositoryService;
 
-    private final Long USER_ID = 1L;
-    private final String OWNER = "owner";
-    private final String NAME = "repo";
-    private final String ACCESS_TOKEN = "decrypted-token";
-    private final String ENCRYPTED_TOKEN = "encrypted-token";
-
-    @BeforeEach
-    void setUp() {
-        User mockUser = mock(User.class, RETURNS_DEEP_STUBS);
-
-        lenient().when(mockUser.getGithubUser().getGithubToken().value()).thenReturn(ENCRYPTED_TOKEN);
-        lenient().when(userPortOut.getById(USER_ID)).thenReturn(mockUser);
-        lenient().when(cipherPortOut.decrypt(ENCRYPTED_TOKEN)).thenReturn(ACCESS_TOKEN);
-    }
-
     @Nested
-    class GetRepositories {
+    @DisplayName("Repository 조회")
+    class RepositoryQueries {
         @Test
-        @DisplayName("성공")
-        void getRepositories_success() {
-            RepositoryResult repos = new RepositoryResult(
-                    List.of(
-                            new seungyong.helpmebackend.repository.domain.entity.Repository(
-                                    "https://example.com/avatar-1.png", "repo-1", OWNER
-                            ),
-                            new seungyong.helpmebackend.repository.domain.entity.Repository(
-                                    "https://example.com/avatar-2.png", "repo-2", OWNER
-                            ),
-                            new seungyong.helpmebackend.repository.domain.entity.Repository(
-                                    "https://example.com/avatar-3.png", "repo-3", OWNER
-                            )
-                    ),
-                    3
-            );
+        @DisplayName("설치의 Repository 목록을 application result로 반환한다")
+        void getRepositories() {
+            Repository repository = new Repository("avatar", NAME, OWNER);
+            given(githubAccessTokenProvider.get(USER_ID)).willReturn(TOKEN);
+            given(repositoryQueryPortOut.getRepositoriesByInstallationId(USER_ID, TOKEN, 10L, 1, 30))
+                    .willReturn(new RepositoryResult(List.of(repository), 1));
 
-            given(repositoryPortOut.getRepositoriesByInstallationId(anyString(), anyLong(), anyInt(), anyInt()))
-                    .willReturn(repos);
+            var result = repositoryService.getRepositories(USER_ID, 10L, 1, 30);
 
-            ResponseRepositories response = repositoryService.getRepositories(USER_ID, 1L, 1, 10);
-
-            assertThat(response.totalCount()).isGreaterThanOrEqualTo(1);
-            assertThat(response.repositories()).hasSize(3);
+            assertThat(result.repositories()).containsExactly(repository);
+            assertThat(result.totalCount()).isEqualTo(1);
         }
 
         @Test
-        @DisplayName("성공 - 레포지토리가 없는 경우")
-        void getRepositories_success_empty() {
-            RepositoryResult repos = new RepositoryResult(Collections.emptyList(), 0);
+        @DisplayName("Repository 상세를 web DTO 없이 반환한다")
+        void getRepository() {
+            given(githubAccessTokenProvider.get(USER_ID)).willReturn(TOKEN);
+            given(repositoryQueryPortOut.getRepository(any()))
+                    .willReturn(new RepositoryDetailResult("avatar", OWNER, NAME, "main"));
 
-            given(repositoryPortOut.getRepositoriesByInstallationId(anyString(), anyLong(), anyInt(), anyInt()))
-                    .willReturn(repos);
+            var result = repositoryService.getRepository(USER_ID, OWNER, NAME);
 
-            ResponseRepositories response = repositoryService.getRepositories(USER_ID, 1L, 1, 10);
+            assertThat(result.owner()).isEqualTo(OWNER);
+            assertThat(result.defaultBranch()).isEqualTo("main");
+        }
 
-            assertThat(response.totalCount()).isZero();
-            assertThat(response.repositories()).isEmpty();
+        @Test
+        @DisplayName("기본 브랜치와 브랜치 목록을 조합한다")
+        void getBranches() {
+            given(githubAccessTokenProvider.get(USER_ID)).willReturn(TOKEN);
+            given(repositoryQueryPortOut.getRepository(any()))
+                    .willReturn(new RepositoryDetailResult("avatar", OWNER, NAME, "main"));
+            given(repositoryQueryPortOut.getAllBranches(any()))
+                    .willReturn(List.of("main", "dev"));
+
+            var result = repositoryService.getBranches(USER_ID, OWNER, NAME);
+
+            assertThat(result.defaultBranch()).isEqualTo("main");
+            assertThat(result.branches()).containsExactly("main", "dev");
         }
     }
 
     @Nested
-    class GetRepository {
+    @DisplayName("SSE fallback")
+    class Fallback {
         @Test
-        @DisplayName("성공")
-        void getRepository_success() {
-            RepositoryDetailResult repoDetail =
-                    new RepositoryDetailResult("https://example.com/avatar.png", OWNER, NAME, "main");
+        @DisplayName("평가 fallback 저장소에 위임한다")
+        void evaluation() {
+            ReadmeEvaluationResult expected = new ReadmeEvaluationResult(4.5f, List.of("good"));
+            given(readmeAsyncResultStore.getEvaluation("task")).willReturn(expected);
 
-            given(repositoryPortOut.getRepository(any(RepoInfoCommand.class)))
-                    .willReturn(repoDetail);
+            assertThat(repositoryService.fallbackDraftEvaluation("task")).isEqualTo(expected);
+        }
 
-            ResponseRepository response = repositoryService.getRepository(USER_ID, OWNER, NAME);
+        @Test
+        @DisplayName("생성 fallback 저장소에 위임한다")
+        void generation() {
+            GeneratedReadmeResult expected = new GeneratedReadmeResult(List.of());
+            given(readmeAsyncResultStore.getGeneratedReadme("task")).willReturn(expected);
 
-            assertThat(response)
-                    .isNotNull()
-                    .satisfies(r -> {
-                        assertThat(r.owner()).isEqualTo(OWNER);
-                        assertThat(r.name()).isEqualTo(NAME);
-                    });
+            assertThat(repositoryService.fallbackGenerateReadme("task")).isEqualTo(expected);
         }
     }
 
     @Nested
-    class GetBranches {
+    @DisplayName("README Pull Request")
+    class PullRequest {
+        private final CreateReadmePullRequestCommand command =
+                new CreateReadmePullRequestCommand(USER_ID, OWNER, NAME, "main", "# README");
+
         @Test
-        @DisplayName("성공")
-        void getBranches_success() {
-            RepositoryDetailResult repoDetail =
-                    new RepositoryDetailResult("https://example.com/avatar.png", OWNER, NAME, "main");
+        @DisplayName("브랜치 생성, README push, PR 생성 순서로 완료한다")
+        void success() {
+            given(githubAccessTokenProvider.get(USER_ID)).willReturn(TOKEN);
+            given(repositoryContentPortOut.getRecentSHA(any())).willReturn("latest-sha");
+            given(repositoryContentPortOut.getReadmeSHA(any())).willReturn("readme-sha");
+            given(repositoryMutationPortOut.createPullRequest(any()))
+                    .willReturn("https://github.com/pull/1");
 
-            given(repositoryPortOut.getRepository(any(RepoInfoCommand.class)))
-                    .willReturn(repoDetail);
-            given(repositoryPortOut.getAllBranches(any(RepoInfoCommand.class)))
-                    .willReturn(List.of("main", "develop", "feature"));
+            var result = repositoryService.createPullRequest(command);
 
-            ResponseBranches response = repositoryService.getBranches(USER_ID, OWNER, NAME);
-
-            assertThat(response.defaultBranch()).isEqualTo("main");
-
-            assertThat(response.branches()).hasSize(3)
-                    .containsExactlyInAnyOrder("main", "develop", "feature");
-        }
-    }
-
-    @Nested
-    class getFallback {
-        @Test
-        @DisplayName("성공 - 평가 조회")
-        void getFallbackDraftEvaluation_success() {
-            ResponseEvaluation response = new ResponseEvaluation(4.5f, List.of("장점: 전체적으로 잘 작성되었습니다.", "개선: 설치 방법을 추가하면 좋겠습니다."));
-
-            given(redisPortOut.getObject(anyString(), any(TypeReference.class)))
-                    .willReturn(response);
-
-            ResponseEvaluation result = repositoryService.fallbackDraftEvaluation("1");
-
-            assertThat(result).isNotNull().isEqualTo(response);
-
-            verify(redisPortOut, times(1)).getObject(anyString(), any());
-            verify(ssePortOut, times(1)).deleteEmitter(anyString());
-            verify(redisPortOut, times(1)).delete(anyString());
+            assertThat(result.htmlUrl()).isEqualTo("https://github.com/pull/1");
+            verify(repositoryMutationPortOut).createBranch(any());
+            verify(repositoryMutationPortOut).push(any(ReadmePushCommand.class));
+            verify(repositoryMutationPortOut).createPullRequest(any());
         }
 
         @Test
-        @DisplayName("실패 - 평가 없음")
-        void getFallbackDraftEvaluation_notFound() {
-            given(redisPortOut.getObject(anyString(), any(TypeReference.class)))
-                    .willReturn(null);
+        @DisplayName("README push 실패 시 생성한 브랜치를 정리한다")
+        void pushFailure() {
+            given(githubAccessTokenProvider.get(USER_ID)).willReturn(TOKEN);
+            given(repositoryContentPortOut.getRecentSHA(any())).willReturn("latest-sha");
+            given(repositoryContentPortOut.getReadmeSHA(any())).willReturn("readme-sha");
+            doThrow(new IllegalStateException("push failed"))
+                    .when(repositoryMutationPortOut).push(any());
 
-            assertThatThrownBy(() -> repositoryService.fallbackDraftEvaluation("1"))
-                    .isInstanceOf(CustomException.class)
-                    .hasFieldOrPropertyWithValue("errorCode", RepositoryErrorCode.FALLBACK_NOT_FOUND);
-
-            verify(redisPortOut, times(1)).getObject(anyString(), any());
-            verify(ssePortOut, never()).deleteEmitter(anyString());
-            verify(redisPortOut, never()).delete(anyString());
-        }
-
-        @Test
-        @DisplayName("성공 - README 생성")
-        void createReadme_success() {
-            ResponseSections response = new ResponseSections(
-                    List.of(new ResponseSections.Section(1L, "프로젝트 소개", "Helpme.md 프로젝트입니다.", 1))
-            );
-
-            given(redisPortOut.getObject(anyString(), any(TypeReference.class)))
-                    .willReturn(response);
-
-            ResponseSections result = repositoryService.fallbackGenerateReadme("1");
-
-            assertThat(result).isNotNull().isEqualTo(response);
-
-            verify(redisPortOut, times(1)).getObject(anyString(), any());
-            verify(ssePortOut, times(1)).deleteEmitter(anyString());
-            verify(redisPortOut, times(1)).delete(anyString());
-        }
-
-        @Test
-        @DisplayName("실패 - 생성된 README 없음")
-        void createReadme_notFound() {
-            given(redisPortOut.getObject(anyString(), any(TypeReference.class)))
-                    .willReturn(null);
-
-            assertThatThrownBy(() -> repositoryService.fallbackGenerateReadme("1"))
-                    .isInstanceOf(CustomException.class)
-                    .hasFieldOrPropertyWithValue("errorCode", RepositoryErrorCode.FALLBACK_NOT_FOUND);
-
-            verify(redisPortOut, times(1)).getObject(anyString(), any());
-            verify(ssePortOut, never()).deleteEmitter(anyString());
-            verify(redisPortOut, never()).delete(anyString());
-        }
-    }
-
-    @Nested
-    @DisplayName("createPullRequest - PR 생성")
-    class CreatePullRequest {
-        @Test
-        @DisplayName("성공")
-        void createPullRequest_success() {
-            RequestPull request = new RequestPull("main", "new content");
-
-            given(repositoryPortOut.getRecentSHA(any())).willReturn("recent-sha");
-            given(repositoryPortOut.getReadmeSHA(any())).willReturn("readme-sha");
-            given(repositoryPortOut.createPullRequest(any())).willReturn("https://github.com/pr/1");
-
-            ResponsePull response = repositoryService.createPullRequest(request, USER_ID, OWNER, NAME);
-
-            assertThat(response.htmlUrl()).isEqualTo("https://github.com/pr/1");
-            verify(repositoryPortOut, times(1)).createBranch(any());
-            verify(repositoryPortOut, times(1)).push(any());
-        }
-
-        @Test
-        @DisplayName("실패 - README 파일 Push")
-        void createPullRequest_failure_during_push() {
-            RequestPull request = new RequestPull("main", "new content");
-
-            given(repositoryPortOut.getRecentSHA(any())).willReturn("recent-sha");
-            given(repositoryPortOut.getReadmeSHA(any())).willReturn("readme-sha");
-
-            // push 단계에서 에러 발생
-            doThrow(new RuntimeException("GitHub API Push Error"))
-                    .when(repositoryPortOut).push(any(ReadmePushCommand.class));
-
-            assertThatThrownBy(() -> repositoryService.createPullRequest(request, USER_ID, OWNER, NAME))
+            assertThatThrownBy(() -> repositoryService.createPullRequest(command))
                     .isInstanceOf(CustomException.class)
                     .hasFieldOrPropertyWithValue("errorCode", RepositoryErrorCode.PUSH_FAILED);
 
-            verify(repositoryPortOut, never()).createPullRequest(any());
-            verify(repositoryPortOut).deleteBranch(any(RepoBranchCommand.class));
+            verify(repositoryMutationPortOut).deleteBranch(any());
+            verify(repositoryMutationPortOut, never()).createPullRequest(any());
         }
 
         @Test
-        @DisplayName("실패 - Pull Request")
-        void createPullRequest_failure_during_pr_creation() {
-            RequestPull request = new RequestPull("main", "new content");
+        @DisplayName("PR 생성 실패 시 생성한 브랜치를 정리한다")
+        void pullRequestFailure() {
+            given(githubAccessTokenProvider.get(USER_ID)).willReturn(TOKEN);
+            given(repositoryContentPortOut.getRecentSHA(any())).willReturn("latest-sha");
+            given(repositoryContentPortOut.getReadmeSHA(any())).willReturn("readme-sha");
+            given(repositoryMutationPortOut.createPullRequest(any()))
+                    .willThrow(new IllegalStateException("PR failed"));
 
-            given(repositoryPortOut.getRecentSHA(any())).willReturn("recent-sha");
-            given(repositoryPortOut.getReadmeSHA(any())).willReturn("readme-sha");
-
-            doThrow(new RuntimeException("GitHub API PR Creation Error"))
-                    .when(repositoryPortOut).createPullRequest(any(CreatePullRequestCommand.class));
-
-            assertThatThrownBy(() -> repositoryService.createPullRequest(request, USER_ID, OWNER, NAME))
+            assertThatThrownBy(() -> repositoryService.createPullRequest(command))
                     .isInstanceOf(CustomException.class)
-                    .hasFieldOrPropertyWithValue("errorCode", RepositoryErrorCode.PR_CREATION_FAILED);
+                    .hasFieldOrPropertyWithValue(
+                            "errorCode",
+                            RepositoryErrorCode.PR_CREATION_FAILED
+                    );
 
-            verify(repositoryPortOut).deleteBranch(any(RepoBranchCommand.class));
+            verify(repositoryMutationPortOut).deleteBranch(any());
+        }
+
+        @Test
+        @DisplayName("브랜치 정리 실패가 원래 push 오류를 가리지 않는다")
+        void cleanupFailureDoesNotMaskOriginalError() {
+            given(githubAccessTokenProvider.get(USER_ID)).willReturn(TOKEN);
+            given(repositoryContentPortOut.getRecentSHA(any())).willReturn("latest-sha");
+            given(repositoryContentPortOut.getReadmeSHA(any())).willReturn("readme-sha");
+            doThrow(new IllegalStateException("push failed"))
+                    .when(repositoryMutationPortOut).push(any());
+            doThrow(new IllegalStateException("cleanup failed"))
+                    .when(repositoryMutationPortOut).deleteBranch(any());
+
+            assertThatThrownBy(() -> repositoryService.createPullRequest(command))
+                    .isInstanceOf(CustomException.class)
+                    .hasFieldOrPropertyWithValue("errorCode", RepositoryErrorCode.PUSH_FAILED);
         }
     }
 
     @Nested
-    @DisplayName("evaluateDraftReadme - 초안 평가 (비동기)")
-    class EvaluateDraftReadme {
-        private final String taskId = "eval-task-123";
-        private final RequestDraftEvaluation request = new RequestDraftEvaluation("main", "my readme content");
-        private final EvaluationContentResult gptResponse = new EvaluationContentResult(90, List.of("Great job!"));
-
-        @BeforeEach
-        void setUpGPTMock() {
-            lenient().when(gptPortOut.evaluateReadme(any())).thenReturn(gptResponse);
-        }
-
+    @DisplayName("README 비동기 작업")
+    class AsyncReadme {
         @Test
-        @DisplayName("성공 - Cache Hit")
-        void evaluateDraftReadme_success_cache_hit() {
-            String sha = "latest-sha-123";
-            when(repositoryPortOut.getRecentSHA(any())).thenReturn(sha);
-
-            // Redis에서 데이터를 즉시 반환하도록 모킹 (Cache Hit)
-            when(redisPortOut.get(contains("readme"))).thenReturn("cached readme");
-            when(redisPortOut.getObject(contains("commits"), any())).thenReturn(Collections.emptyList());
-            when(redisPortOut.getObject(contains("languages"), any())).thenReturn(Collections.emptyList());
-            when(redisPortOut.getObject(contains("tree"), any())).thenReturn(Collections.emptyList());
-
-            GPTRepositoryInfoResult repoInfo = new GPTRepositoryInfoResult(new String[]{"Java"}, "small", new String[]{"src/Main.java"}, new String[]{});
-            when(redisPortOut.getObject(contains("tech-stack"), any())).thenReturn(repoInfo);
-
-            when(redisPortOut.get(contains("entry"))).thenReturn("encrypted-entry");
-            when(objectCipherPortOut.decrypt(eq("encrypted-entry"), any())).thenReturn(Collections.emptyList());
-
-            when(redisPortOut.get(contains("importance"))).thenReturn("encrypted-importance");
-            when(objectCipherPortOut.decrypt(eq("encrypted-importance"), any())).thenReturn(Collections.emptyList());
-
-            repositoryService.evaluateDraftReadme(request, taskId, USER_ID, OWNER, NAME);
-
-            // 외부 API 직접 호출이 되지 않았는지 검증 (Cache Hit)
-            verify(repositoryPortOut, never()).getReadmeContent(any());
-            verify(repositoryPortOut, never()).getContributors(any());
-            verify(repositoryPortOut, never()).getRepositoryLanguages(any());
-            verify(gptPortOut, never()).getRepositoryInfo(anyString(), any());
-
-            verify(ssePortOut).sendCompletion(eq(taskId), eq(SSETaskName.COMPLETION_EVALUATE_DRAFT.getTaskName()), any(ResponseEvaluation.class));
-        }
-
-        @Test
-        @DisplayName("실패 - 커밋 내역 없음")
-        void evaluateDraftReadme_success_cache_miss() {
-            when(repositoryPortOut.getRecentSHA(any())).thenReturn(null);
-
-            repositoryService.evaluateDraftReadme(request, taskId, USER_ID, OWNER, NAME);
-
-            Awaitility.await().atMost(5, TimeUnit.SECONDS).untilAsserted(() -> {
-                verify(ssePortOut).sendCompletion(eq(taskId), eq(SSETaskName.COMPLETION_EVALUATE_DRAFT_ERROR.getTaskName()), any(ResponseEntity.class));
-            });
-        }
-    }
-
-    @Nested
-    @DisplayName("generateDraftReadme - README 생성 (비동기)")
-    class GenerateDraftReadme {
-        private final String taskId = "gen-task-456";
-        private final RequestGeneration request = new RequestGeneration("main");
-        private final String generatedReadme = "# Draft Readme\nEnjoy your code!";
-
-        @BeforeEach
-        void setUpGPTAndSectionMock() {
-            lenient().when(gptPortOut.generateDraftReadme(any())).thenReturn(generatedReadme);
-
-            Project project = mock(Project.class);
-            lenient().when(project.getId()).thenReturn(1L);
-            lenient().when(projectPortOut.getByUserIdAndRepoFullName(anyLong(), anyString())).thenReturn(Optional.of(project));
-
-            Section section = mock(Section.class);
-            lenient().when(sectionPortOut.saveAll(anyList())).thenReturn(List.of(section));
-        }
-
-        @Test
-        @DisplayName("성공 - Partial Cache Hit")
-        void generateDraftReadme_success_partial_cache_hit() {
-            String sha = "latest-sha-123";
-            when(repositoryPortOut.getRecentSHA(any())).thenReturn(sha);
-
-            // Readme는 캐시에 있음
-            when(redisPortOut.get(contains("readme"))).thenReturn("cached readme");
-
-            // Languages는 캐시 만료로 null 반환 (Cache Miss)
-            when(redisPortOut.getObject(contains("languages"), any())).thenReturn(null);
-
-            when(repositoryPortOut.getRepositoryLanguages(any())).thenReturn(List.of(new RepositoryLanguageResult("Java", 100L)));
-
-            when(redisPortOut.getObject(contains("commits"), any())).thenReturn(Collections.emptyList());
-            when(redisPortOut.getObject(contains("tree"), any())).thenReturn(Collections.emptyList());
-            when(redisPortOut.getObject(contains("tech-stack"), any())).thenReturn(
-                    new GPTRepositoryInfoResult(new String[]{"Java"}, "small", new String[]{}, new String[]{})
+        @DisplayName("평가 결과를 application result로 발행한다")
+        void evaluateSuccess() {
+            EvaluateDraftReadmeCommand command = new EvaluateDraftReadmeCommand(
+                    USER_ID, OWNER, NAME, "main", "# README", "evaluation-task"
             );
-            when(redisPortOut.get(contains("entry"))).thenReturn("enc");
-            when(objectCipherPortOut.decrypt(eq("enc"), any())).thenReturn(Collections.emptyList());
-            when(redisPortOut.get(contains("importance"))).thenReturn("enc");
+            given(githubAccessTokenProvider.get(USER_ID)).willReturn(TOKEN);
+            given(readmeContextLoader.load(USER_ID, OWNER, NAME, TOKEN, "main"))
+                    .willReturn(context());
+            given(gptPortOut.evaluateReadme(any()))
+                    .willReturn(new EvaluationContentResult(4.5f, List.of("good")));
 
-            when(sectionPortOut.getSectionsByUserIdAndRepoFullName(anyLong(), anyString())).thenReturn(List.of(mock(Section.class)));
+            repositoryService.evaluateDraftReadme(command);
 
-            repositoryService.generateDraftReadme(request, taskId, USER_ID, OWNER, NAME);
-
-            verify(repositoryPortOut, never()).getReadmeContent(any()); // 캐시 탔으므로 호출 X
-            verify(repositoryPortOut, times(1)).getRepositoryLanguages(any()); // 캐시 만료됐으므로 호출 O
-
-            // 새로 조회해온 Language 정보를 Redis에 갱신(setObject)했는지 검증
-            verify(redisPortOut).setObject(contains("languages"), anyList(), any());
-            verify(sectionPortOut).deleteAllByUserIdAndRepoFullName(USER_ID, OWNER + "/" + NAME);
+            verify(readmeAsyncResultStore).publishEvaluation(
+                    "evaluation-task",
+                    SSETaskName.COMPLETION_EVALUATE_DRAFT.getTaskName(),
+                    new ReadmeEvaluationResult(4.5f, List.of("good"))
+            );
         }
 
         @Test
-        @DisplayName("실패 - 성공 응답 실패 (폴백 저장)")
-        void generateDraftReadme_failure_sse_send_caches_result() {
-            String sha = "latest-sha-123";
-            when(repositoryPortOut.getRecentSHA(any())).thenReturn(sha);
+        @DisplayName("평가 실패를 오류 이벤트로 발행한다")
+        void evaluateFailure() {
+            EvaluateDraftReadmeCommand command = new EvaluateDraftReadmeCommand(
+                    USER_ID, OWNER, NAME, "main", "# README", "evaluation-task"
+            );
+            RuntimeException failure = new RuntimeException("failure");
+            given(githubAccessTokenProvider.get(USER_ID)).willThrow(failure);
 
-            // 모든 캐시가 존재한다고 가정
-            lenient().when(redisPortOut.get(anyString())).thenReturn("cache");
-            lenient().when(objectCipherPortOut.decrypt(anyString(), any())).thenReturn(Collections.emptyList());
+            repositoryService.evaluateDraftReadme(command);
 
-            GPTRepositoryInfoResult repoInfo = new GPTRepositoryInfoResult(new String[]{"Java"}, "small", new String[]{}, new String[]{});
-
-            // 요청하는 키에 맞춰서 타입을 반환해 NPE 방지
-            lenient().when(redisPortOut.getObject(anyString(), any())).thenAnswer(invocation -> {
-                String key = invocation.getArgument(0);
-                if (key.contains("tech-stack")) {
-                    return repoInfo;
-                }
-
-                return Collections.emptyList();
-            });
-
-            // SSE 전송이 실패하도록 모킹
-            when(ssePortOut.sendCompletion(anyString(), anyString(), any())).thenReturn(false);
-
-            repositoryService.generateDraftReadme(request, taskId, USER_ID, OWNER, NAME);
-
-            verify(redisPortOut).setObjectIfAbsent(contains(RedisKey.SSE_EMITTER_GENERATION_KEY.getValue()), any(ResponseSections.class), any());
+            verify(readmeAsyncResultStore).publishError(
+                    "evaluation-task",
+                    SSETaskName.COMPLETION_EVALUATE_DRAFT_ERROR.getTaskName(),
+                    failure
+            );
         }
 
         @Test
-        @DisplayName("실패 - 커밋 내역 없음")
-        void generateDraftReadme_success_cache_miss() {
-            when(repositoryPortOut.getRecentSHA(any())).thenReturn(null);
+        @DisplayName("생성 결과의 DB 저장이 끝난 뒤 결과를 발행한다")
+        void generateSuccess() {
+            GenerateDraftReadmeCommand command = new GenerateDraftReadmeCommand(
+                    USER_ID, OWNER, NAME, "main", "generation-task"
+            );
+            GeneratedReadmeResult generated = new GeneratedReadmeResult(List.of());
+            given(githubAccessTokenProvider.get(USER_ID)).willReturn(TOKEN);
+            given(readmeContextLoader.load(USER_ID, OWNER, NAME, TOKEN, "main"))
+                    .willReturn(context());
+            given(gptPortOut.generateDraftReadme(any())).willReturn("# Generated");
+            given(readmeSectionWriter.replace(USER_ID, OWNER + "/" + NAME, "# Generated"))
+                    .willReturn(generated);
 
-            repositoryService.generateDraftReadme(request, taskId, USER_ID, OWNER, NAME);
+            repositoryService.generateDraftReadme(command);
 
-            Awaitility.await().atMost(5, TimeUnit.SECONDS).untilAsserted(() -> {
-                verify(ssePortOut).sendCompletion(eq(taskId), eq(SSETaskName.COMPLETION_GENERATE_ERROR.getTaskName()), any(ResponseEntity.class));
-            });
+            verify(readmeSectionWriter, times(1))
+                    .replace(USER_ID, OWNER + "/" + NAME, "# Generated");
+            verify(readmeAsyncResultStore).publishGeneratedReadme(
+                    "generation-task",
+                    SSETaskName.COMPLETION_GENERATE.getTaskName(),
+                    generated
+            );
         }
+    }
+
+    private ReadmeContext context() {
+        return new ReadmeContext(
+                "# Existing",
+                List.of(),
+                new GPTRepositoryInfoResult(
+                        new String[]{"Java"},
+                        "small",
+                        new String[0],
+                        new String[0]
+                ),
+                List.of(),
+                List.of(),
+                List.of(),
+                List.of()
+        );
     }
 }
